# watcher-tempest-plugin

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst  readme.rst
releasenotes/notes/: drop-py-2-7-eb1979587d237f5e.yaml  drop-python38-support-eeb09a8bc0170ce2.yaml  parametrize-promtool-write-url-path-3534f2b9.yaml
releasenotes/source/: conf.py  index.rst
watcher_tempest_plugin/: README.rst  config.py  infra_optim_clients.py  plugin.py  utils.py
watcher_tempest_plugin/services/: base.py
watcher_tempest_plugin/services/infra_optim/: base.py
watcher_tempest_plugin/services/infra_optim/v1/json/: api_microversion_fixture.py  client.py
watcher_tempest_plugin/services/metric/: prometheus_client.py
watcher_tempest_plugin/services/metric/v1/json/: client.py
watcher_tempest_plugin/tests/api/admin/: base.py  test_action.py  test_action_plan.py  test_api_discovery.py  test_audit.py  test_audit_template.py  test_data_model.py  test_goal.py  test_scoring_engine.py  test_service.py  test_strategy.py
watcher_tempest_plugin/tests/client_functional/: __init__.py
watcher_tempest_plugin/tests/client_functional/v1/: base.py  test_action.py  test_action_plan.py  test_audit.py  test_audit_template.py  test_goal.py  test_scoring_engine.py  test_service.py  test_strategy.py
watcher_tempest_plugin/tests/common/: base.py
watcher_tempest_plugin/tests/scenario/: base.py  manager.py  test_continuous_audit.py  test_data_model.py  test_execute_actuator.py  test_execute_basic_optim.py  test_execute_dummy_optim.py  test_execute_host_maintenance.py  test_execute_node_resource_consolidation.py  test_execute_storage_balance.py  test_execute_strategies.py  test_execute_strategies_real.py  test_execute_vm_workload_consolidation.py  test_execute_workload_balance.py  test_execute_workload_balancing.py  test_execute_workload_stabilization.py  test_execute_zone_migration.py
