[metadata]
name = watcher-tempest-plugin
summary = Tempest plugin watcher-tempest-plugin
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/watcher/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.5

[files]
packages =
    watcher_tempest_plugin

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = watcher-tempest-plugin/locale
domain = watcher-tempest-plugin

[update_catalog]
domain = watcher-tempest-plugin
output_dir = watcher-tempest-plugin/locale
input_file = watcher-tempest-plugin/locale/watcher-tempest-plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = watcher-tempest-plugin/locale/watcher-tempest-plugin.pot

[entry_points]
tempest.test_plugins =
    watcher_tests = watcher_tempest_plugin.plugin:WatcherTempestPlugin
