[metadata]
name = watcher-tempest-plugin
summary = Tempest plugin watcher-tempest-plugin
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/watcher/latest/
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    watcher_tempest_plugin

[compile_catalog]
directory = watcher-tempest-plugin/locale
domain = watcher-tempest-plugin

[update_catalog]
domain = watcher-tempest-plugin
output_dir = watcher-tempest-plugin/locale
input_file = watcher-tempest-plugin/locale/watcher-tempest-plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = watcher-tempest-plugin/locale/watcher-tempest-plugin.pot

[entry_points]
tempest.test_plugins =
    watcher_tests = watcher_tempest_plugin.plugin:WatcherTempestPlugin
